--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -17,6 +17,6 @@ jobs:
             curl --location \
             --request POST \
             --header "Accept: application/vnd.github+json" \
-            --header "Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}" \
-            https://api.github.com/repos/OWNER/REPO/dispatches \
+            --header "Authorization: Bearer ${{ secrets.DISPATCH_SECRET }}" \
+            https://api.github.com/repos/sinat101/mockdocs/dispatches \
             --data '{"event_type":"new_release"}'
