--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -5,8 +5,7 @@ name: Trigger Doc Update
 on:
   workflow_run:
     workflows: ["release"]
-    types:
-      - completed
+    types: [completed]
 
 jobs:
   trigger-doc-update:
