--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -12,11 +12,19 @@ jobs:
     name: Trigger Doc Update
     runs-on: ubuntu-latest
     steps:
+      - name: Generate a token
+        id: generate_token
+        uses: actions/create-github-app-token@v1
+        with:
+          app_id: ${{ secrets.SEMGREP_DOCS_BOT_APP_ID }}
+          private_key: ${{ secrets.SEMGREP_DOCS_BOT_PRIVATE_KEY }}
       - name: Trigger doc update workflow
+        env:
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
           curl --location \
           --request POST \
           --header "Accept: application/vnd.github+json" \
-          --header "Authorization: Bearer ${{ secrets.DISPATCH_SECRET }}" \
+          --header "Authorization: Bearer $GITHUB_TOKEN" \
           https://api.github.com/repos/sinat101/mockdocs/dispatches \
           --data '{"event_type":"new_release"}'
