--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Generate a token
         id: generate_token
-        uses: tibdex/github-app-token@v2
+        uses: actions/create-github-app-token@v1
         with:
           app_id: ${{ secrets.SEMGREP_DOCS_BOT_APP_ID }}
           private_key: ${{ secrets.SEMGREP_DOCS_BOT_PRIVATE_KEY }}
