--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -14,12 +14,10 @@ jobs:
     steps:
       - name: Generate a token
         id: generate_token
-        uses: tibdex/github-app-token@v2
+        uses: peter-murray/workflow-application-token-action@v2
         with:
-          app_id: ${{ secrets.SEMGREP_DOCS_BOT_APP_ID }}
-          private_key: ${{ secrets.SEMGREP_DOCS_BOT_PRIVATE_KEY }}
-          repositories: >-
-             ["sinat101/mockdocs"]
+          application_id: ${{ secrets.SEMGREP_DOCS_BOT_APP_ID }}
+          application_private_key: ${{ secrets.SEMGREP_DOCS_BOT_PRIVATE_KEY }}
       - name: Trigger doc update workflow
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
