--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -11,6 +11,7 @@ jobs:
   trigger-doc-update:
     name: Trigger Doc Update
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Generate a token
         id: generate_token
