--- a/.github/workflows/trigger-doc-update.yml
+++ b/.github/workflows/trigger-doc-update.yml
@@ -19,16 +19,15 @@ jobs:
           app_id: ${{ secrets.SEMGREP_DOCS_BOT_APP_ID }}
           private_key: ${{ secrets.SEMGREP_DOCS_BOT_PRIVATE_KEY }}
       - name: Trigger doc update workflow
+        env:
+          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
-          curl --location \
-          --request POST \
-          --header "Accept: application/vnd.github+json" \
-          --header "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
-          https://api.github.com/repos/sinat101/mockdocs/dispatches \
-          --data '{"event_type":"new_release"}'
-
-
-        # env:
-        #   GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          gh api repos/sinat101/mockdocs/dispatches -f event_type=new_release --verbose
+          
         # run: |
-        #   gh api repos/sinat101/mockdocs/dispatches -f event_type=new_release --verbose
+        #   curl --location \
+        #   --request POST \
+        #   --header "Accept: application/vnd.github+json" \
+        #   --header "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
+        #   https://api.github.com/repos/sinat101/mockdocs/dispatches \
+        #   --data '{"event_type":"new_release"}'
